--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ body.characters-active .character-image {
 h2 {
   font-size: 2.5rem;
   margin-bottom: 1.5rem;
-  color: var(--secondary-color);
+  color: var(--light-color);
   position: relative;
   display: inline-block;
 }
